--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-  <h1>gustavo voce tem uma mensagem da sua queridíssima amiga winnie</h1>
+  <h1>gustvao voce tem uma mensagem da sua queridissima amiga winnie</h1>
   <button>
     <a class="html" href="/me.html">clique para abrir</a>
     </button>
